# Shared-C

./: .gitignore  CMakeLists.txt  README.md
src/: abs.h  ansiColor.c  ansiColor.h  ansiCursor.c  ansiCursor.h  arrayCheck.h  arrayCombine.h  arrayList.h  arrayMathUtility.h  arrayPrint.c  arrayPrint.h  binarySearch.c  binarySearch.h  binarySort.c  binarySort.h  blockPrint.c  blockPrint.h  boxDrawing.c  boxDrawing.h  charArray.c  charArray.h  charArray_substringUtility.c  charArray_substringUtility.h  charMenu.c  charMenu.h  characterSet.c  characterSet.h  clamp.c  clamp.h  clearInput.c  clearInput.h  consoleProcessing.c  consoleProcessing.h  digits.c  digits.h  fileCharArray.c  fileCharArray.h  fileUtility.c  fileUtility.h  floatColor.c  (+40 more)
src/hashTable/: charArrayHashTable.c  charArrayHashTable.h  hashTable.c  hashTable.h  hashTableEntry.c  hashTableEntry.h
